--- a/data/build.gradle
+++ b/data/build.gradle
@@ -6,6 +6,9 @@ plugins {
 
 dependencies {
 
+    implementation project(":domain")
+    implementation project(":shared:kotlin")
+
     implementation libs.androidx.core
     api libs.androidx.room.library
     implementation libs.androidx.room.ktx
