feat: create user repository unit test

--- a/build.gradle
+++ b/build.gradle
@@ -37,11 +37,10 @@ buildscript {
 
     }
     dependencies {
-        classpath libs.gradle.plugin
-        classpath libs.kotlin.gradle.plugin
-        classpath libs.dagger.hilt.plugin
-        classpath libs.androidx.navigation.plugin
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.30'
+        classpath "com.android.tools.build:gradle:4.2.2"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.30"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:2.39.1"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.5"
     }
 }
 
