--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,19 +1,20 @@
 [versions]
-kotlin = "1.5.0"
+kotlin = "1.5.30"
+#
 androidxlifecycle = "2.3.1"
 androidxnavigation = "2.3.5"
 androidxroom = "2.3.0"
+#
 moshi = "1.12.0"
 retrofit = "2.9.0"
 junit = "4.13.2"
 coroutines = "1.4.2"
-materialDrawer = "8.4.1"
-
+#
 [libraries]
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
-kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
+#kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 #
-gradle-plugin = "com.android.tools.build:gradle:4.2.1"
+#android-tool_gradle-plugin = { module = "com.android.tools.build:gradle", version.ref = "gradleplugin" }
 #
 androidx-core = "androidx.core:core-ktx:1.5.0"
 androidx-appcompat = "androidx.appcompat:appcompat:1.3.0"
@@ -27,15 +28,11 @@ androidx-lifecycle-ext = "androidx.lifecycle:lifecycle-extensions:2.2.0"
 androidx-constraintlayout = "androidx.constraintlayout:constraintlayout:2.0.1"
 androidx-navigation-library = { module = "androidx.navigation:navigation-fragment-ktx", version.ref = "androidxnavigation" }
 androidx-navigation-ui = { module = "androidx.navigation:navigation-ui-ktx", version.ref = "androidxnavigation" }
-androidx-navigation-plugin = { module = "androidx.navigation:navigation-safe-args-gradle-plugin", version.ref = "androidxnavigation" }
-androidx-browser = "androidx.browser:browser:1.3.0"
+#androidx-navigation-plugin = { module = "androidx.navigation:navigation-safe-args-gradle-plugin", version.ref = "androidxnavigation" }
 androidx-swiperefreshlayout = "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 androidx-room-library = { module = "androidx.room:room-runtime", version.ref = "androidxroom" }
 androidx-room-kapt = { module = "androidx.room:room-compiler", version.ref = "androidxroom" }
 androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "androidxroom" }
-androidx-crypto = "androidx.security:security-crypto:1.0.0-rc04"
-androidx-work-runtime = "androidx.work:work-runtime-ktx:2.6.0-rc01"
-androidx-hilt-work = "androidx.hilt:hilt-work:1.0.0"
 androidx-hilt-compiler = "androidx.hilt:hilt-compiler:1.0.0"
 androidx-recyclerview = "androidx.recyclerview:recyclerview:1.2.1"
 #
@@ -60,27 +57,9 @@ permissionx = "com.permissionx.guolindev:permissionx:1.4.0"
 #
 shimmer = "com.facebook.shimmer:shimmer:0.5.0"
 #
-material-drawer-core = { module = "com.mikepenz:materialdrawer", version.ref = "materialDrawer" }
-material-drawer-nav = { module = "com.mikepenz:materialdrawer-nav", version.ref = "materialDrawer" }
-#
-imageslider = "com.ouattararomuald:slider:3.0.1"
-#
-dagger-hilt-core = "com.google.dagger:hilt-android:2.36"
-dagger-hilt-plugin = "com.google.dagger:hilt-android-gradle-plugin:2.36"
-dagger-hilt-compiler = "com.google.dagger:hilt-android-compiler:2.36"
-#
-google-services = "com.google.gms:google-services:4.3.8"
-google-ads = "com.google.android.gms:play-services-ads:20.3.0"
-google-auth = "com.google.android.gms:play-services-auth:19.2.0"
-#
-progressbutton = "com.github.razir.progressbutton:progressbutton:2.1.0"
-#
-firebase-bom = "com.google.firebase:firebase-bom:28.2.0"
-firebase-analytics = { module = "com.google.firebase:firebase-analytics-ktx" }
-firebase-messaging = { module = "com.google.firebase:firebase-messaging-ktx" }
-firebase-auth = { module = "com.google.firebase:firebase-auth" }
-firebase-appdistribution = "com.google.firebase:firebase-appdistribution-gradle:2.1.3"
-firebase-crashlytics = { module = "com.google.firebase:firebase-crashlytics-ktx" }
+dagger-hilt-core = "com.google.dagger:hilt-android:2.39.1"
+#dagger-hilt-plugin = "com.google.dagger:hilt-android-gradle-plugin:2.39.1"
+dagger-hilt-compiler = "com.google.dagger:hilt-android-compiler:2.39.1"
 #
 coredesugaring = "com.android.tools:desugar_jdk_libs:1.0.9"
 #
