feat: create shared test module with support class for test view model

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -65,6 +65,7 @@ coredesugaring = "com.android.tools:desugar_jdk_libs:1.0.9"
 #
 leakcanary = "com.squareup.leakcanary:leakcanary-android:2.7"
 #
+androidx-coretesting = "androidx.arch.core:core-testing:2.1.0"
 junit-library = "junit:junit:4.13.2"
 junit-ext = "androidx.test.ext:junit:1.1.2"
 mockk = "io.mockk:mockk:1.10.6"
