--- a/shared/android/build.gradle
+++ b/shared/android/build.gradle
@@ -3,12 +3,17 @@ plugins {
     id 'kotlin-android'
 }
 
+android {
+    buildFeatures {
+        viewBinding = true
+    }
+}
+
 dependencies {
     api project(":shared:kotlin")
 
     implementation libs.androidx.core
     implementation libs.androidx.appcompat
-
     implementation libs.androidx.activity
     implementation libs.androidx.fragment
     implementation libs.androidx.lifecycle.common
