--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
     android:theme="@style/AppTheme"
     tools:ignore="AllowBackup,GoogleAppIndexingWarning">
     <activity
-      android:name=".MainActivity"
+      android:name=".ui.MainActivity"
       android:exported="false">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
