--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,8 @@ android {
 dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+  implementation project(":data")
+  implementation project(":domain")
   implementation project(":shared:android")
 
   implementation libs.androidx.core
