--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
     tools:ignore="AllowBackup,GoogleAppIndexingWarning">
     <activity
       android:name=".ui.MainActivity"
-      android:exported="false">
+      android:exported="true">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
 
