--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,29 @@ buildscript {
     }
 }
 
-allprojects {
+plugins {
+    id "io.gitlab.arturbosch.detekt" version "1.18.0"
+}
+
+subprojects {
+    apply plugin: "io.gitlab.arturbosch.detekt"
+
+    detekt {
+        buildUponDefaultConfig = true
+        allRules = true
+
+        config = files("$rootDir/detekt.yml")
+
+        reports {
+            html {
+                enabled = true
+                destination = file("build/reports/detekt/detekt.html")
+            }
+            xml.enabled = false
+            txt.enabled = false
+        }
+    }
+
     repositories {
         google()
         mavenCentral()
