--- a/build.gradle
+++ b/build.gradle
@@ -1,35 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext {
-        kotlin_version = '1.5.30'
-
-        appcompat_version = '1.1.0'
-        core_ktx_version = '1.2.0'
-        core_testing_version = '2.1.0'
-        constraintlayout_version = '1.1.3'
-        material_version = "1.1.0"
-        moshi_version = '1.8.0'
-        retrofit_version = '2.7.1'
-        okhttp_version = '4.3.1'
-        picasso_version = '2.71828'
-        circleimageview_version = '3.0.0'
-
-        junit_version = '4.12'
-        mockito_version = '2.27.0'
-        mockito_kotlin_version = '2.1.0'
-
-        test_runner_version = '1.1.1'
-        espresso_version = '3.1.1'
-
-        koin_version = "2.0.1"
-        dagger_version = "2.23.2"
-        lifecycle_version = "2.2.0"
-        coroutines_version = "1.3.3"
-        rxjava_version = "2.2.17"
-        rxandroid_version = "2.1.1"
-        core_ktx_test_version = "1.2.0"
-    }
 
     repositories {
         google()
@@ -37,10 +8,10 @@ buildscript {
 
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.2.2"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.30"
-        classpath "com.google.dagger:hilt-android-gradle-plugin:2.39.1"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.5"
+        classpath libs.android.tools.gradle
+        classpath libs.kotlin.gradle
+        classpath libs.dagger.hilt.gradle
+        classpath libs.androidx.navigation.gradle
     }
 }
 
