--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,13 +9,19 @@ moshi = "1.12.0"
 retrofit = "2.9.0"
 junit = "4.13.2"
 coroutines = "1.4.2"
+
+androidtoolsgradle = "4.2.2"
+
+daggerhilt = "2.39.1"
+
 #
 [libraries]
+android-tools-gradle = { module = "com.android.tools.build:gradle", version.ref = "androidtoolsgradle" }
+kotlin-gradle = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
-#kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
-#
-#android-tool_gradle-plugin = { module = "com.android.tools.build:gradle", version.ref = "gradleplugin" }
-#
+dagger-hilt-gradle = { module = "com.google.dagger:hilt-android-gradle-plugin", version.ref = "daggerhilt" }
+androidx-navigation-gradle = { module = "androidx.navigation:navigation-safe-args-gradle-plugin", version.ref = "androidxnavigation" }
+
 androidx-core = "androidx.core:core-ktx:1.5.0"
 androidx-appcompat = "androidx.appcompat:appcompat:1.3.0"
 androidx-activity = "androidx.activity:activity-ktx:1.2.2"
@@ -28,18 +34,19 @@ androidx-lifecycle-ext = "androidx.lifecycle:lifecycle-extensions:2.2.0"
 androidx-constraintlayout = "androidx.constraintlayout:constraintlayout:2.0.1"
 androidx-navigation-library = { module = "androidx.navigation:navigation-fragment-ktx", version.ref = "androidxnavigation" }
 androidx-navigation-ui = { module = "androidx.navigation:navigation-ui-ktx", version.ref = "androidxnavigation" }
-#androidx-navigation-plugin = { module = "androidx.navigation:navigation-safe-args-gradle-plugin", version.ref = "androidxnavigation" }
 androidx-swiperefreshlayout = "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 androidx-room-library = { module = "androidx.room:room-runtime", version.ref = "androidxroom" }
 androidx-room-kapt = { module = "androidx.room:room-compiler", version.ref = "androidxroom" }
 androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "androidxroom" }
 androidx-hilt-compiler = "androidx.hilt:hilt-compiler:1.0.0"
 androidx-recyclerview = "androidx.recyclerview:recyclerview:1.2.1"
+androidx-test-runner = "androidx.test:runner:1.4.0"
+androidx-test-expresso = "androidx.test.espresso:espresso-core:3.4.0"
+androidx-test-core = "androidx.test:core-ktx:1.4.0"
 #
 google-material = "com.google.android.material:material:1.3.0"
 #
 coil-core = "io.coil-kt:coil:1.3.2"
-coil_gif = "io.coil-kt:coil-gif:1.3.2"
 #
 coroutines-library = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
 coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutines" }
@@ -53,9 +60,8 @@ moshi-codegen = { module = "com.squareup.moshi:moshi-kotlin-codegen", version.re
 #
 okhttp-logginginterceptor = "com.squareup.okhttp3:logging-interceptor:4.9.0"
 #
-dagger-hilt-core = "com.google.dagger:hilt-android:2.39.1"
-#dagger-hilt-plugin = "com.google.dagger:hilt-android-gradle-plugin:2.39.1"
-dagger-hilt-compiler = "com.google.dagger:hilt-android-compiler:2.39.1"
+dagger-hilt-core = { module = "com.google.dagger:hilt-android", version.ref = "daggerhilt" }
+dagger-hilt-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "daggerhilt" }
 #
 coredesugaring = "com.android.tools:desugar_jdk_libs:1.0.9"
 #
